examples/chapter05/external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  ports:
    - port: 80

---

apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
      - ip: 216.58.210.238
      - ip: 172.217.169.3
    ports:
      - port: 80
