examples/chapter05/externalname-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: google.com
  ports:
    - port: 80
