examples/chapter05/kubia-svc-headless-icluding-nonready.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless-all
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
